# nexus-sdk

./: .env.example  README.md  pyproject.toml
examples/: enterprise_setup.py  provider_smoke.py  quickstart.py
rich_agent/: __init__.py  agent.py  audit.py  errors.py  harness.py  mcp.py  result.py  router.py  runner.py  skills.py  subagent.py  tool.py  tracing.py
rich_agent/config/: __init__.py  permissions.py  quota.py  tenancy.py
rich_agent/control/: __init__.py  approvals.py  guardrails.py  handoff.py  tool.py
rich_agent/core/: __init__.py  agent.py  events.py  result.py  run_config.py  runner.py
rich_agent/models/: __init__.py  anthropic.py  azure.py  base.py  gateway.py  openai.py
rich_agent/providers/: __init__.py  anthropic.py  factory.py  openai.py
rich_agent/resources/: __init__.py  knowledge.py  mcp.py  memory.py  skills.py  todos.py
rich_agent/runtime/: __init__.py  harness.py  hooks.py  sandbox.py  workspace.py
rich_agent/sessions/: __init__.py  base.py  encrypted.py  memory.py  postgres.py  redis.py  sqlite.py
tests/: test_provider_factory.py  test_providers.py  test_runner.py  test_session_backends.py  test_tooling.py
