[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-sdk"
version = "0.1.0"
description = "Enterprise-oriented Agent Runtime + Harness SDK scaffold."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "doggy" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
openai = [
  "openai>=1.0.0",
]
anthropic = [
  "anthropic>=0.39.0",
]
azure = [
  "openai>=1.0.0",
  "azure-identity>=1.17.0",
]
sessions = [
  "redis>=5.0.0",
  "psycopg[binary]>=3.1.0",
  "cryptography>=42.0.0",
]
all = [
  "openai>=1.0.0",
  "anthropic>=0.39.0",
  "azure-identity>=1.17.0",
  "redis>=5.0.0",
  "psycopg[binary]>=3.1.0",
  "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rich_agent*"]
